# xfce4-datetime-setter

./: README.md  TODO  meson.build  meson_options.txt
panels/: meson.build
panels/common/: meson.build
panels/datetime/: cc-datetime-panel.c  cc-timezone-map.c  datetime.gresource.xml  gnome-datetime-panel.desktop.in.in  meson.build
panels/datetime/icons/: meson.build
panels/datetime/po-timezones/: meson.build
po/: af.po  an.po  ar.po  as.po  be.po  bg.po  bn.po  bn_IN.po  ca.po  ca@valencia.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  gu.po  he.po  hi.po  hu.po  id.po  it.po  ja.po  kk.po  km.po  kn.po  ko.po  lt.po  lv.po  meson.build  ml.po  mr.po  nb.po  (+24 more)
stubs/: gdesktop-enums.h
stubs/libgnome-desktop/: gnome-wall-clock.h
xfce/: datetime-dialog.c  datetime-dialog.gresource.xml  datetime-dialog.ui  main.c  meson.build
